Hero section added

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_APIKEY = AIzaSyC7_Uqs-bAyU2DIkDyFVjsEPnDrkDqjEME
-VITE_AUTHDOMAIN = brandshopclientside.firebaseapp.com
-VITE_PROJECTID = brandshopclientside
-VITE_STORAGEBUCKET = brandshopclientside.appspot.com
-VITE_MESSAGINGSENDERID = 675387290159
-VITE_APPID = 1:675387290159:web:63d9a90f0f59fa9e314cda
+VITE_APIKEY = AIzaSyANpTthY_jZo_wcWfTfuGE5bm9XFwMNCCs
+VITE_AUTHDOMAIN = brandshopmz.firebaseapp.com
+VITE_PROJECTID = brandshopmz
+VITE_STORAGEBUCKET = brandshopmz.appspot.com
+VITE_MESSAGINGSENDERID = 492028726560
+VITE_APPID = 1:492028726560:web:52fe8a31e2e4f392881b45
